# 3drenderdemo

./: CMakeLists.txt  README.md
include/: shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
